--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-select": "2.3.5",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
     "ember-source": "~3.16.0",
