--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.2.2",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
@@ -41,6 +42,7 @@
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^8.0.0",
     "ember-power-select": "2.3.5",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
@@ -49,6 +51,7 @@
     "embercasts-library-styles": "^1.1.2",
     "eslint-plugin-ember": "^7.7.2",
     "eslint-plugin-node": "^11.0.0",
+    "liquid-fire": "^0.31.0",
     "loader.js": "^4.7.0",
     "qunit-dom": "^1.0.0",
     "sass": "^1.26.3"
